<resources>
    <string name="app_name">Covid Statistic Tracker</string>
    <string name="covid_positive_title">"Number of Positive Tests in %1$s as of today, "</string>
    <string name="covid_death_title">"Number of Deaths in %1$s as of today, "</string>
    <string name="permission_title">Permission to access camera</string>
    <string name="permission_message">To add a profile photo, we need access to your camera</string>
    <string name="retake_picture">Retake Picture</string>
    <string name="covid_death">Covid Death Cases Statistic</string>
    <string name="covid_positive">Covid Positive Cases Statistic</string>
    <string name="camera_prompt_vaccine">Got Your Vaccine?</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="covid_history_activity_button"><i>Covid Statistics History -></i></string>
    <string name="covid_card_title">Covid-19 Vaccination Record</string>
    <string name="covid_status_activity_button_text">Update Your Vaccination Status</string>
    <string name="covid_status_edit_button_text">Update Covid Status</string>
    <string name="no_covid_card_entry">If you got a vaccine, add it here to display data!</string>
    <string name="enter_vaccine">Enter Which Dosage:</string>
    <string name="enter_manufacturer">Enter Manufacturer:</string>
    <string name="enter_date_received">Enter Date Received:</string>
    <string name="enter_clinic">Enter Clinic Site</string>
    <string name="vaccine_type_display">Vaccine Type: %1$s</string>
    <string name="manufacturer_display">Manufacturer: %1$s</string>
    <string name="date_received_display">Date Received: %1$s</string>
    <string name="clinic_site_display">Clinic Site: %1$s</string>
    <string name="calendar_label">Select Date When Vaccine Received</string>
    <string name="covid_app_title">Covid Tracker App</string>
    <string name="covid_app_logo_desc">Covid_App_logo</string>
    <string-array name="Vaccine_manufacturer_array">
        <item>"Pfizer"</item>
        <item>"Moderna"</item>
        <item>"Johnson and Johnson"</item>
    </string-array>
    <string-array name="Vaccine_dose_array">
        <item>"1st Dose"</item>
        <item>"2nd Dose"</item>
        <item>"Other"</item>
    </string-array>
    <string-array name="US_states_array">
        <item>"Alabama"</item>
        <item>"Alaska"</item>
        <item>"Arizona"</item>
        <item>"Arkansas"</item>
        <item>"California"</item>
        <item>"Colorado"</item>
        <item>"Connecticut"</item>
        <item>"Delaware"</item>
        <item>"Florida"</item>
        <item>"Georgia"</item>
        <item>"Hawaii"</item>
        <item>"Idaho"</item>
        <item>"Illinois"</item>
        <item>"Indiana"</item>
        <item>"Iowa"</item>
        <item>"Kansas"</item>
        <item>"Kentucky"</item>
        <item>"Louisiana"</item>
        <item>"Maine"</item>
        <item>"Maryland"</item>
        <item>"Massachusetts"</item>
        <item>"Michigan"</item>
        <item>"Minnesota"</item>
        <item>"Mississippi"</item>
        <item>"Missouri"</item>
        <item>"Montana"</item>
        <item>"Nebraska"</item>
        <item>"Nevada"</item>
        <item>"New Hampshire"</item>
        <item>"New Jersey"</item>
        <item>"New Mexico"</item>
        <item>"New York"</item>
        <item>"North Carolina"</item>
        <item>"North Dakota"</item>
        <item>"Ohio"</item>
        <item>"Oklahoma"</item>
        <item>"Oregon"</item>
        <item>"Pennsylvania"</item>
        <item>"Rhode Island"</item>
        <item>"South Carolina"</item>
        <item>"South Dakota"</item>
        <item>"Tennessee"</item>
        <item>"Texas"</item>
        <item>"Utah"</item>
        <item>"Vermont"</item>
        <item>"Virginia"</item>
        <item>"Washington"</item>
        <item>"West Virginia"</item>
        <item>"Wisconsin"</item>
        <item>"Wyoming"</item>
    </string-array>
    <string name="title_activity_covid_history">CovidHistoryActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>