<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCovidCardActivity">

    <!--    <EditText-->
<!--        android:id="@+id/editDate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/enter_date_received"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editClinicSite"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editManufacturer" />-->

    <Button
        android:id="@+id/editCovidStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covid_status_edit_button_text"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editClinicSite" />

    <TextView
        android:id="@+id/vaccineTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Vaccine Type"
        android:textSize="18sp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/vaccineTypeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/vaccineTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/vaccineTypeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vaccineTypeLabel" />

    <TextView
        android:id="@+id/manufacturerTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Manufacturer"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/manufacturerTypeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccineTypeSpinner" />


    <Spinner
        android:id="@+id/manufacturerTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/editDateCalendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerTypeLabel" />

    <CalendarView
        android:id="@+id/editDateCalendarView"
        android:layout_width="279dp"
        android:layout_height="261dp"
        app:layout_constraintBottom_toTopOf="@+id/editClinicSite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerTypeSpinner" />

    <EditText
        android:id="@+id/editClinicSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/enter_clinic"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editCovidStatusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarLabel" />

    <TextView
        android:id="@+id/calendarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_label"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="486dp"
        app:layout_constraintTop_toBottomOf="@+id/editDateCalendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editClinicSite" />


</androidx.constraintlayout.widget.ConstraintLayout>